--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,8 +16,19 @@ jobs:
     - name: Run clj-kondo
       run: docker run -v $PWD:/calc --rm cljkondo/clj-kondo clj-kondo --lint /calc
 
-  run:
+  run-clojure:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - run: lein run "2 + (5 * 6 + 10)"
+
+  run-clojurescript:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 14
+    - run: npm install
+    - run: npm run build
+    - run: npm run calc "2 + (5 * 6 + 10)"
