--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,8 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
-        node-version: 14
-    - run: npm install
+        node-version: 12
+        cache: 'npm'
+    - run: npm ci
     - run: npm run build
     - run: npm run calc "2 + (5 * 6 + 10)"
