--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -15,5 +15,9 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
     - run: lein uberjar
     - name: Build with native-image
-      run: native-image -jar target/uberjar/calculator-0.1.0-SNAPSHOT-standalone.jar calc
+      run: native-image --no-fallback -jar target/uberjar/calculator-0.1.0-SNAPSHOT-standalone.jar calc
+    - run: file ./calc
+    - run: ldd ./calc
+    - run: ls -l ./calc
+    - run: upx -9 ./calc
     - run: ./calc "2 + (5 * 6 + 10)"
