Revert the use of graal-build-time
Unfortunately, for a reason not entirely clear yet, using
graal-build-time leads to the execution error:

./calc "2 + (5 * 6 + 10)"
Error: No matching method codePointCount found taking 2 args for class java.lang.String

--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -15,7 +15,7 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
     - run: lein uberjar
     - name: Build with native-image
-      run: native-image --no-fallback -jar target/uberjar/calculator-0.1.0-SNAPSHOT-standalone.jar calc
+      run: native-image -jar target/uberjar/calculator-0.1.0-SNAPSHOT-standalone.jar calc
     - run: file ./calc
     - run: ldd ./calc
     - run: ls -l ./calc
